fixed issue with spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,9 @@ a {
 	font-family: "Poppins", sans-serif;
 }
 
+@media (max-width: 1024px) {
+	#insights {
+		margin-top: 100px;
+		margin-bottom: 100px;
+	}
+}
